[package]
name = "minsk-language"
version = "0.1.0"
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.20", features = ["derive"] }
strum_macros = "0.20"

[dev-dependencies]
pretty_assertions = "0.6"
itertools = "0.9"
spectral = "0.6"

